--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   http: ^0.12.2
   dartz: ^0.9.2
   get_it: ^5.0.3
+  flutter_screenutil: ^4.0.0
+  google_fonts: ^1.1.1
+  flutter_bloc: ^6.1.1
 
 dev_dependencies:
   flutter_test:
@@ -49,9 +52,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/pngs/
+    - assets/svgs/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
