--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   flutter_screenutil: ^4.0.0
   google_fonts: ^1.1.1
   flutter_bloc: ^6.1.1
+  flutter_svg: ^0.18.0
+  cached_network_image: ^2.2.0+1
 
 dev_dependencies:
   flutter_test:
